# tin-beta-snapshots

./: MANIFEST  Makefile  README  README.MAC  README.WIN  aclocal.m4  conf-tin  config.guess  config.sub  configure  configure.in  makefile.in  mkdirs.sh  po4a.conf  tin.spec
amiga/: amiga.c  smakefile
doc/: CHANGES  CHANGES.old  CREDITS  INSTALL  TODO  WHATSNEW  art_handling.txt  auth.txt  config-anomalies  filtering  good-netkeeping-seal  internals.txt  iso2asc.txt  keymap.sample  mailcap.sample  mbox.5  mmdf.5  opt-case.1  opt-case.pl.1  plp_snprintf.3  rcvars.txt  tin.1  tin.5  tin.defaults  tinews.1  tools.txt  umlaute.txt  umlauts.txt  url_handler.1  w2r.1  w2r.pl.1  wildmat.3
doc/l10n/: de.po  en_GB.po  es.po  tin-man.pot
doc/l10n/de/: tin.1  tin.5
doc/l10n/en_GB/: tin.1  tin.5
doc/l10n/es/: tin.1  tin.5
include/: autoconf.hin  bool.h  bugrep.h  config.h  debug.h  extern.h  keymap.h  menukeys.h  missing_fd.h  newsrc.h  nntplib.h  oldconfig.h  plp_snprintf.h  policy.h  proto.h  rfc2045.h  rfc2046.h  snprintf.h  stpwatch.h  tcurses.h  tin.h  tinrc.h  tnntp.h  tnntps.h  trace.h  version.h
intl/: Makefile.in  bindtextdom.c  cat-compat.c  dcgettext.c  dcigettext.c  dgettext.c  explodename.c  finddomain.c  gettext.c  gettextP.h  intl-compat.c  l10nflist.c  libgettext.h  loadmsgcat.c  localcharset.c  localealias.c  plural.c  textdomain.c
libcanlock/: COPYING  ChangeLog  ChangeLog_V0  ChangeLog_V1  ChangeLog_V2  Makefile.in  README
libcanlock/include/: base64.h  canlock-private.h  canlock.h  config.h  sha-private.h  sha.h
libcanlock/src/: base64.c  canlock.c  hmac.c  hmac_sha1.c  secret.c  sha1.c  sha224-256.c  sha384-512.c  usha.c
libcanlock/test/: canlocktest.c  canlocktest_legacy.c  hkdf.c  shatest.c
libcanlock/util/: canlock.c
pcre/: ChangeLog  Makefile.in  RunTest.in  config.h  configure.in  dftables.c  pcre_compile.c  pcre_study.c  ucp.c  version.sh
po/: Makefile.in  Makefile.inn  POTFILES  POTFILES.in  da.po  de.po  en_GB.po  es.po  et.po  fr.po  ro.po  ru.po  rw.po  sv.po  tin.pot  tr.po  zh_CN.po  zh_TW.po
po-man/: de.add  de.po  en_GB.po  es.po  ro.po  tin-man.pot
po-man/de/: tin.1  tin.5
po-man/en_GB/: tin.1  tin.5
po-man/es/: tin.1  tin.5
po-man/ro/: tin.1  tin.5
src/: Makefile.in  active.c  art.c  attrib.c  auth.c  charset.c  color.c  config.c  cook.c  crc32.c  curses.c  debug.c  envarg.c  feed.c  filter.c  getline.c  global.c  group.c  hashstr.c  header.c  heapsort.c  help.c  inews.c  init.c  joinpath.c  keymap.c  lang.c  langinfo.c  list.c  lock.c  mail.c  mailcap.c  main.c  makecfg.c  memory.c  mimetypes.c  misc.c  my_tmpfile.c  newsrc.c  nntplib.c  (+38 more)
tools/: expiretover  flnews2tin.pl  metamutt  opt-case.pl  tinews.pl  tinlock  tinrcupdate.pl  url_handler.pl  url_handler.sh  w2r.pl
